# twitch-dl-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md  ROADMAP.md
.gsd/: DECISIONS.md  KNOWLEDGE.md  PROJECT.md  REQUIREMENTS.md  event-log.jsonl  notifications.jsonl  routing-history.json  state-manifest.json
.gsd/milestones/M001/: M001-CONTEXT.md  M001-ROADMAP.md  M001-SUMMARY.md  M001-VALIDATION.md
.gsd/milestones/M001/anchors/: plan-slice.json  research-slice.json
.gsd/milestones/M001/slices/S01/: S01-CONTEXT.md  S01-PLAN.md  S01-RESEARCH.md  S01-SUMMARY.md  S01-UAT.md
.gsd/milestones/M001/slices/S02/: S02-CONTEXT.md  S02-PLAN.md  S02-RESEARCH.md  S02-SUMMARY.md  S02-UAT.md
.gsd/milestones/M001/slices/S03/: S03-CONTEXT.md  S03-PLAN.md  S03-RESEARCH.md  S03-SUMMARY.md  S03-UAT.md
.gsd/milestones/M001/slices/S04/: S04-CONTEXT.md  S04-PLAN.md  S04-RESEARCH.md  S04-SUMMARY.md  S04-UAT.md
.gsd/milestones/M001/slices/S05/: S05-CONTEXT.md  S05-PLAN.md  (+3 more)
.gsd/milestones/M002-z48awz/: M002-z48awz-CONTEXT.md  M002-z48awz-ROADMAP.md
.gsd/milestones/M002-z48awz/anchors/: plan-slice.json  research-slice.json
docs/planning/: MILESTONES.md  OPEN-QUESTIONS.md  PRINCIPLES.md
docs/planning/NOTES/: 2026-04-06-operator-feedback.md
proofs/: run-proof.sh
proofs/scratch-artifacts/9900000001/: metadata.json  status.json  transcript.srt  transcript.vtt
proofs/scratch-artifacts/9900000002/: audio.m4a  metadata.json  status.json
scripts/: backfill_metadata_titles.py
src/: artifact.rs  cli.rs  downloader.rs  error.rs  ffmpeg.rs  lib.rs  main.rs  transcribe.rs  twitch.rs
(+94 files in other folders)
